--- a/src/viam/sdk/CMakeLists.txt
+++ b/src/viam/sdk/CMakeLists.txt
@@ -28,6 +28,7 @@ else()
 endif()
 message(WARNING "api proto label is ${VIAMCPPSDK_API_PROTO_LABEL}")
 configure_file(common/private/version_metadata.hpp.in common/private/version_metadata.hpp @ONLY)
+configure_file(${CMAKE_CURRENT_BINARY_DIR}/../../../viam_rust_utils.h rpc/private/viam_rust_utils.h COPYONLY)
 
 # Configure the grpc client forward declarations file
 configure_file(common/grpc_fwd.hpp.in common/grpc_fwd.hpp)
@@ -314,7 +315,7 @@ endif()
 # TODO several of these dependencies should properly be attached to `viam_rust_utils`,
 # not `viamsdk`. However, we currently are unable to do so while maintaining compilation
 if (APPLE)
-  target_link_libraries(viamsdk PUBLIC "-framework Security")
+  target_link_libraries(viamsdk PUBLIC "-framework CoreFoundation" "-framework Security")
 elseif (NOT WIN32)
   target_link_libraries(viamsdk PRIVATE dl)
   target_link_libraries(viamsdk PRIVATE rt)
