--- a/src/viam/sdk/CMakeLists.txt
+++ b/src/viam/sdk/CMakeLists.txt
@@ -146,6 +146,7 @@ target_sources(viamsdk
     resource/stoppable.cpp
     robot/client.cpp
     rpc/dial.cpp
+    rpc/grpc_context_observer.cpp
     rpc/server.cpp
     rpc/private/viam_grpc_channel.cpp
     services/discovery.cpp
@@ -221,6 +222,7 @@ target_sources(viamsdk
       ../../viam/sdk/resource/stoppable.hpp
       ../../viam/sdk/robot/client.hpp
       ../../viam/sdk/rpc/dial.hpp
+      ../../viam/sdk/rpc/grpc_context_observer.hpp
       ../../viam/sdk/rpc/message_sizes.hpp
       ../../viam/sdk/rpc/server.hpp
       ../../viam/sdk/services/discovery.hpp
