--- a/src/viam/sdk/common/grpc_fwd.hpp.in
+++ b/src/viam/sdk/common/grpc_fwd.hpp.in
@@ -87,7 +87,7 @@ using GrpcServer = ::grpc_impl::Server;
 
 using GrpcServerBuilder = ::grpc_impl::ServerBuilder;
 
-using GrpcServerContext = ::grpc_impl::ServerBuilder;
+using GrpcServerContext = ::grpc_impl::ServerContext;
 
 using GrpcServerCredentials = ::grpc_impl::ServerCredentials;
 
