[RSDK-12829] Provide a utility to expose client metadata within resource servers (#515)

--- a/src/viam/sdk/common/grpc_fwd.hpp.in
+++ b/src/viam/sdk/common/grpc_fwd.hpp.in
@@ -35,6 +35,8 @@ class Server;
 
 class ServerBuilder;
 
+class ServerContext;
+
 class ServerCredentials;
 
 }  // namespace grpc
@@ -52,6 +54,8 @@ using GrpcClientReaderInterface = ::grpc::ClientReaderInterface<T>;
 using GrpcServer = ::grpc::Server;
 
 using GrpcServerBuilder = ::grpc::ServerBuilder;
+
+using GrpcServerContext = ::grpc::ServerContext;
 
 using GrpcServerCredentials = ::grpc::ServerCredentials;
 
@@ -73,6 +77,8 @@ class Server;
 
 class ServerBuilder;
 
+class ServerContext;
+
 class ServerCredentials;
 
 }  // namespace grpc_impl
@@ -90,6 +96,8 @@ using GrpcClientReaderInterface = ::grpc_impl::ClientReaderInterface<T>;
 using GrpcServer = ::grpc_impl::Server;
 
 using GrpcServerBuilder = ::grpc_impl::ServerBuilder;
+
+using GrpcServerContext = ::grpc_impl::ServerContext;
 
 using GrpcServerCredentials = ::grpc_impl::ServerCredentials;
 
