--- a/src/viam/sdk/CMakeLists.txt
+++ b/src/viam/sdk/CMakeLists.txt
@@ -61,7 +61,8 @@ endif()
 
 target_sources(viamsdk
   PRIVATE
-    app/client.cpp
+    app/data_client.cpp
+    app/viam_client.cpp
     common/audio.cpp
     common/audio.cpp
     common/client_helper.cpp
@@ -175,7 +176,8 @@ target_sources(viamsdk
       ../..
       ${CMAKE_CURRENT_BINARY_DIR}/../..
     FILES
-      ../../viam/sdk/app/client.hpp
+      ../../viam/sdk/app/data_client.hpp
+      ../../viam/sdk/app/viam_client.hpp
       ../../viam/sdk/common/audio.hpp
       ../../viam/sdk/common/client_helper.hpp
       ../../viam/sdk/common/audio.hpp
