--- a/src/viam/api/buf.yaml
+++ b/src/viam/api/buf.yaml
@@ -9,3 +9,4 @@ deps:
   - buf.build/googleapis/googleapis
   - buf.build/viamrobotics/api
   - buf.build/viamrobotics/goutils
+  - buf.build/opentelemetry/opentelemetry
