revert deprecated command

--- a/src/viam/api/CMakeLists.txt
+++ b/src/viam/api/CMakeLists.txt
@@ -299,7 +299,7 @@ endif(VIAMCPPSDK_USE_DYNAMIC_PROTOS)
 
 add_custom_target(
   update-buf
-  COMMAND buf dep update ${CMAKE_CURRENT_SOURCE_DIR}
+  COMMAND buf mod update ${CMAKE_CURRENT_SOURCE_DIR}
 )
 
 # Declare the viamcpp library, and attach sources,
