--- a/src/viam/sdk/CMakeLists.txt
+++ b/src/viam/sdk/CMakeLists.txt
@@ -68,6 +68,7 @@ target_sources(viamsdk
     common/client_helper.cpp
     common/exception.cpp
     common/instance.cpp
+    common/kinematics.cpp
     common/linear_algebra.cpp
     common/mesh.cpp
     common/pose.cpp
