--- a/src/viam/sdk/tests/CMakeLists.txt
+++ b/src/viam/sdk/tests/CMakeLists.txt
@@ -64,8 +64,9 @@ viamcppsdk_add_boost_test(test_board.cpp)
 viamcppsdk_add_boost_test(test_button.cpp)
 viamcppsdk_add_boost_test(test_camera.cpp)
 viamcppsdk_add_boost_test(test_common.cpp)
-viamcppsdk_add_boost_test(test_encoder.cpp)
+viamcppsdk_add_boost_test(test_data_consumer.cpp)
 viamcppsdk_add_boost_test(test_discovery.cpp)
+viamcppsdk_add_boost_test(test_encoder.cpp)
 viamcppsdk_add_boost_test(test_gantry.cpp)
 viamcppsdk_add_boost_test(test_gripper.cpp)
 viamcppsdk_add_boost_test(test_generics.cpp)
