run module test

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -65,6 +65,12 @@ jobs:
             clang-tidy-15 \
             clang-format
 
+      - name: Build viam server
+        run: |
+          curl https://storage.googleapis.com/packages.viam.com/apps/viam-server/viam-server-latest-${{ matrix.viam-server }} -o viam-server
+          chmod 755 viam-server
+          mv viam-server /usr/local/bin
+
 
 
       - name: cmake
@@ -83,6 +89,9 @@ jobs:
         run: |
           cmake --build build --target install
           cmake --install build
+
+      - name: Module test
+        run: etc/module_test/entrypoint.sh
 
       - name: test
         working-directory: build
