fix download url

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -67,7 +67,7 @@ jobs:
 
       - name: Build viam server
         run: |
-          curl https://storage.googleapis.com/packages.viam.com/apps/viam-server/viam-server-latest-${{ matrix.viam-server }} -o viam-server
+          curl https://storage.googleapis.com/packages.viam.com/apps/viam-server/viam-server-latest-x86_64 -o viam-server
           chmod 755 viam-server
           mv viam-server /usr/local/bin
 
