--- a/src/viam/api/config/buf.gen.remote.plugin.yaml.in
+++ b/src/viam/api/config/buf.gen.remote.plugin.yaml.in
@@ -1,4 +1,4 @@
-# Copyright 2023 Viam Inc.
+# Copyright 2026 Viam Inc.
 #
 # Licensed under the Apache License, Version 2.0 (the "License");
 # you may not use this file except in compliance with the License.
@@ -12,11 +12,11 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 
-version: v1
+version: v2
 managed:
   enabled: true
 plugins:
-  - plugin: buf.build/grpc/cpp:v@VIAMCPPSDK_GRPCXX_VERSION@
+  - remote: buf.build/grpc/cpp:v@VIAMCPPSDK_GRPCXX_VERSION@
     out: gen/viam/api
-  - plugin: buf.build/protocolbuffers/cpp:v@VIAMCPPSDK_PROTOC_VERSION@
+  - remote: buf.build/protocolbuffers/cpp:v@VIAMCPPSDK_PROTOC_VERSION@
     out: gen/viam/api
