--- a/src/viam/api/CMakeLists.txt
+++ b/src/viam/api/CMakeLists.txt
@@ -297,7 +297,7 @@ endif(VIAMCPPSDK_USE_DYNAMIC_PROTOS)
 
 add_custom_target(
   update-buf
-  COMMAND buf mod update ${CMAKE_CURRENT_SOURCE_DIR}
+  COMMAND buf mod update ${PROJECT_SOURCE_DIR}
 )
 
 # Declare the viamcpp library, and attach sources,
