add lockfile generate

--- a/.github/workflows/conan-publish.yml
+++ b/.github/workflows/conan-publish.yml
@@ -54,6 +54,12 @@ jobs:
           conan create . --build=missing -s:a compiler.cppstd=17 -o:a "&:shared=False"
           conan upload "viam-cpp-sdk/*" -r viamconan -c
 
+      - name: Generate lockfile
+        run: |
+          cd src/viam/examples/project/cmake
+          conan lock create . -s:a compiler.cppstd=17 -o:a "viam-cpp-sdk/*:shared=False"
+          cat conan.lock
+
       - name: Upload additional deps
         if: inputs.upload_deps
         run: |
@@ -142,11 +148,17 @@ jobs:
         conan create . --build=missing -s:a compiler.cppstd=17 -o:a "&:shared=False"
         conan upload "viam-cpp-sdk/*" -r viamconan -c
 
+    - name: Generate lockfile
+      run: |
+        cd src/viam/examples/project/cmake
+        conan lock create . -s:a compiler.cppstd=17 -o:a "viam-cpp-sdk/*:shared=False"
+        cat conan.lock
+
     - name: Upload additional deps
       if: inputs.upload_deps && !(matrix.runner == 'buildjet-8vcpu-ubuntu-2204' && matrix.image == 'ubuntu:22.04')
       run: |
         . ./conan_venv/bin/activate
-        
+
         conan upload "boost/*" -r viamconan -c
         conan upload "grpc/*" -r viamconan -c
         conan upload "protobuf/*" -r viamconan -c
