--- a/.github/workflows/conan-publish.yml
+++ b/.github/workflows/conan-publish.yml
@@ -52,20 +52,20 @@ jobs:
           # more details.
           export BUF_CONFIG_DIR=$(mktemp -d)
           conan create . --build=missing -s:a compiler.cppstd=17 -o:a "&:shared=False"
-          conan upload "viam-cpp-sdk/*" -r viamconan -c
+#          conan upload "viam-cpp-sdk/*" -r viamconan -c
 
       - name: Generate lockfile
         run: |
           cd src/viam/examples/project/cmake
-          conan lock create . -s:a compiler.cppstd=17 -o:a "viam-cpp-sdk/*:shared=False"
+          conan lock create . -s:a compiler.cppstd=17 -o:a "viam-cpp-sdk/*:shared=False" -nr
           cat conan.lock
 
-      - name: Upload additional deps
-        if: inputs.upload_deps
-        run: |
-          conan upload "boost/*" -r viamconan -c
-          conan upload "grpc/*" -r viamconan -c
-          conan upload "protobuf/*" -r viamconan -c
+      # - name: Upload additional deps
+      #   if: inputs.upload_deps
+      #   run: |
+      #     conan upload "boost/*" -r viamconan -c
+      #     conan upload "grpc/*" -r viamconan -c
+      #     conan upload "protobuf/*" -r viamconan -c
 
 
   build_linux:
@@ -146,12 +146,12 @@ jobs:
         . ./conan_venv/bin/activate
 
         conan create . --build=missing -s:a compiler.cppstd=17 -o:a "&:shared=False"
-        conan upload "viam-cpp-sdk/*" -r viamconan -c
+#        conan upload "viam-cpp-sdk/*" -r viamconan -c
 
     - name: Generate lockfile
       run: |
         cd src/viam/examples/project/cmake
-        conan lock create . -s:a compiler.cppstd=17 -o:a "viam-cpp-sdk/*:shared=False"
+        conan lock create . -s:a compiler.cppstd=17 -o:a "viam-cpp-sdk/*:shared=False" -nr
         cat conan.lock
 
     - name: Upload additional deps
