--- a/.github/workflows/conan-publish.yml
+++ b/.github/workflows/conan-publish.yml
@@ -21,8 +21,8 @@ jobs:
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
-        # with:
-        #   ref: releases/${{ inputs.ref }}
+        with:
+          ref: releases/${{ inputs.ref }}
 
 
       - name: Install dependencies
@@ -78,8 +78,8 @@ jobs:
     steps:
     - name: Checkout code
       uses: actions/checkout@v4
-      # with:
-      #   ref: releases/${{ inputs.ref }}
+      with:
+        ref: releases/${{ inputs.ref }}
 
     - name: Show platform info
       run: |
