point to fork again

--- a/.github/workflows/update-templates.yml
+++ b/.github/workflows/update-templates.yml
@@ -36,7 +36,8 @@ jobs:
       - name: Checkout generator repository
         uses: actions/checkout@v4
         with:
-          repository: viamrobotics/rdk
+          repository: lia-viam/rdk
+          ref: cpp-fixes
           path: rdk
 
       - name: Install dependencies
