--- a/.github/workflows/update-templates.yml
+++ b/.github/workflows/update-templates.yml
@@ -153,7 +153,7 @@ jobs:
           commit-message: '[WORKFLOW] Update component/services templates'
           branch: 'workflow/update-templates'
           base: main
-          add-paths: res/module_generator/_templates'
+          add-paths: 'res/module_generator/_templates'
           delete-branch: true
           title: Automated template update
           body: This is an auto-generated PR to update module generator templates for components/services
