--- a/.github/workflows/update-templates.yml
+++ b/.github/workflows/update-templates.yml
@@ -3,15 +3,10 @@ name: Update module generator templates
 on:
   push:
     branches:
-      - main
+      - update-job
     paths:
       - 'src/viam/sdk/components/*.hpp'
       - 'src/viam/sdk/services/*.hpp'
-  workflow_dispatch:
-    inputs:
-      branch:
-        required: true
-        type: string
 
 jobs:
   update_templates:
@@ -24,13 +19,6 @@ jobs:
         if: github.event_name == 'push'
         uses: actions/checkout@v4
         with:
-          fetch-depth: 0
-
-      - name: Clone SDK
-        if: github.event_name == 'workflow_dispatch'
-        uses: actions/checkout@v4
-        with:
-          ref: ${{ inputs.branch }}
           fetch-depth: 0
 
       - name: Checkout generator repository
@@ -104,7 +92,6 @@ jobs:
           ninja install
           cl_gen -h
 
-      # On push events we only operate on cpp files for which the service or component hpp file had a diff
       - name: Operate on changed files
         if: github.event_name == 'push'
         run: |
@@ -120,28 +107,6 @@ jobs:
           for changed in $changed_files; do
             cl_gen -p ./build $changed -o \
               $(echo $changed | \
-              cut -d '/' -f 4-5 | \
-              sed 's@$@.in@' | \
-              sed 's@^@res/module_generator/_templates/@')
-          done
-
-      # On a workflow_dispatch we just try to regenerate all the templates and see if there is a diff
-      - name: Operate on changed files
-        if: github.event_name == 'workflow_dispatch'
-        run: |
-          tree res
-
-          all_files=$(find src/viam/sdk/components src/viam/sdk/services \
-            -name '*.cpp' \
-            -not -path '*/private/*' \
-            -not -name 'component.cpp' \
-            -not -name 'service.cpp')
-          echo "All files to regenerate:"
-          echo "$all_files"
-
-          for file in $all_files; do
-            cl_gen -p ./build $file -o \
-              $(echo $file | \
               cut -d '/' -f 4-5 | \
               sed 's@$@.in@' | \
               sed 's@^@res/module_generator/_templates/@')
