--- a/.github/workflows/update-templates.yml
+++ b/.github/workflows/update-templates.yml
@@ -15,18 +15,17 @@ jobs:
       image: debian:bookworm
 
     steps:
-      - name: Clone SDK
-        if: github.event_name == 'push'
-        uses: actions/checkout@v6
-        with:
-          fetch-depth: 0
-
       - name: Checkout generator repository
         uses: actions/checkout@v6
         with:
           repository: lia-viam/rdk
           ref: cpp-fixes
           path: rdk
+
+      - name: Clone SDK
+        uses: actions/checkout@v6
+        with:
+          fetch-depth: 0
 
       - name: Install dependencies
         run: |
@@ -93,9 +92,13 @@ jobs:
           cl_gen -h
 
       - name: Operate on changed files
-        if: github.event_name == 'push'
         run: |
           # ${{ github.event.before }} ${{ github.event.after }} once testing is done
+
+          git status
+          git log -n 3
+
+          git diff --name-only HEAD^1 HEAD
 
           changed_files=$(git diff --name-only  HEAD^1 HEAD | \
             grep -E '^src/viam/sdk/(components|services)/[a-z_]+\.hpp' | \
