--- a/.github/workflows/update-templates.yml
+++ b/.github/workflows/update-templates.yml
@@ -77,12 +77,14 @@ jobs:
           ninja install
           cl_gen -h
 
-      - name: Clone SDK
+      - name: Checkout SDK
         uses: actions/checkout@v6
         with:
           fetch-depth: 0
+          path: sdk
 
       - name: Generate SDK build tree
+        working-directory: sdk
         run: |
           mkdir build
           cd build
@@ -92,6 +94,7 @@ jobs:
             -DCMAKE_CXX_COMPILER=clang++-15
 
       - name: Operate on changed files
+        working-directory: sdk
         run: |
           # ${{ github.event.before }} ${{ github.event.after }} once testing is done
 
@@ -118,6 +121,7 @@ jobs:
       - name: Create PR
         uses: peter-evans/create-pull-request@v8
         with:
+          path: sdk
           branch: workflow/update-templates
           add-paths: |
             res/module_generator/_templates/components/*
