--- a/.github/workflows/update-templates.yml
+++ b/.github/workflows/update-templates.yml
@@ -7,6 +7,11 @@ on:
     paths:
       - 'src/viam/sdk/components/*.hpp'
       - 'src/viam/sdk/services/*.hpp'
+  workflow_dispatch:
+    inputs:
+      branch:
+        required: true
+        type: string
 
 jobs:
   update_templates:
@@ -45,7 +50,6 @@ jobs:
               protobuf-compiler-grpc \
               software-properties-common \
               sudo \
-              tree \
               wget \
               zlib1g-dev
 
@@ -78,9 +82,17 @@ jobs:
           cl_gen -h
 
       - name: Checkout SDK
+        if: github.event_name == 'push'
         uses: actions/checkout@v6
         with:
           fetch-depth: 0
+          path: sdk
+
+      - name: Checkout SDK
+        if: github.event_name == 'workflow_dispatch'
+        uses: actions/checkout@v6
+        with:
+          ref: ${{ inputs.branch }}
           path: sdk
 
       - name: Generate SDK build tree
@@ -93,7 +105,9 @@ jobs:
             -DVIAMCPPSDK_BUILD_EXAMPLES=OFF \
             -DCMAKE_CXX_COMPILER=clang++-15
 
+      # On push events we only operate on cpp files for which the service or component hpp file had a diff
       - name: Operate on changed files
+        if: github.event_name == 'push'
         working-directory: sdk
         run: |
           changed_files=$(git diff --name-only  ${{ github.event.before }} ${{ github.event.after }} | \
@@ -106,6 +120,27 @@ jobs:
           for changed in $changed_files; do
             cl_gen -p ./build $changed -o \
               $(echo $changed | \
+              cut -d '/' -f 4-5 | \
+              sed 's@$@.in@' | \
+              sed 's@^@res/module_generator/_templates/@')
+          done
+
+      # On a workflow_dispatch we just try to regenerate all the templates and see if there is a diff
+      - name: Operate on changed files
+        if: github.event_name == 'workflow_dispatch'
+        working-directory: sdk
+        run: |
+          all_files=$(find src/viam/sdk/components src/viam/sdk/services \
+            -name '*.cpp' \
+            -not -path '*/private/*' \
+            -not -name 'component.cpp' \
+            -not -name 'service.cpp')
+          echo "All files to regenerate:"
+          echo "$all_files"
+
+          for file in $all_files; do
+            cl_gen -p ./build $file -o \
+              $(echo $file | \
               cut -d '/' -f 4-5 | \
               sed 's@$@.in@' | \
               sed 's@^@res/module_generator/_templates/@')
