--- a/.github/workflows/update-templates.yml
+++ b/.github/workflows/update-templates.yml
@@ -155,5 +155,7 @@ jobs:
             res/module_generator/_templates/components/*
             res/module_generator/_templates/services/*
           title: Automated update to module generator templates
+          commit-message: '[WORKFLOW] Updating module generator templates'
+          body: This is an auto-generated PR to update module generator templates.
           token: ${{ secrets.GIT_ACCESS_TOKEN }}
           delete-branch: true
